# anaroot_samurai_dayone

./: .gitignore  CMakeLists.txt  configure.in
sources/: Makefile.am
sources/AnaLoop/Core/: Makefile.am  analoop_linkdef.hh
sources/AnaLoop/Core/include/: TArtAnaFile.hh  TArtAnaLoop.hh
sources/AnaLoop/Core/src/: TAlEncHist.cc  TArtAnaFile.cc  TArtAnaLoopManager.cc
sources/AnaLoop/EncExample/: Makefile.am  analoopencexample_linkdef.hh
sources/AnaLoop/EncExample/include/: EAnalyser.hh  EWNum.hh  TAlEncCATANAExample.hh  TAlEncESPRIExample.hh  TAlEncHIMEExample.hh  TAlEncNINJAExample.hh  TAlEncNeuLANDExample.hh  TAlEncSAMURAIDCExample.hh  TAlEncSILICONSExample.hh
sources/AnaLoop/EncExample/src/: TAlEncCATANAExample.cc  TAlEncESPRIExample.cc  TAlEncExample.cc  TAlEncGlobalExample.cc  TAlEncHIMEExample.cc  TAlEncMINOSExample.cc  TAlEncNINJAExample.cc  TAlEncNeuLANDExample.cc  TAlEncSAMURAIDCExample.cc  TAlEncSAMURAIFrag.cc  TAlEncSAMURAIHODExample.cc  TAlEncSAMURAIPlaExample.cc  TAlEncSILICONSExample.cc  listval.pl
sources/AnaLoop/Example/: Makefile.am  analoopexample_linkdef.hh
sources/Core/: CMakeLists.txt  Makefile.am  anacore_linkdef.hh
sources/Core/include/: TArtCore.hh  TArtDecoderA3400.hh  TArtDecoderBigEndianV7XX.hh  TArtDecoderHINP.hh  TArtDecoderMQDC32.hh  TArtDecoderMTDC32.hh  TArtDecoderNeulandTS.hh  TArtDecoderSIS3301.hh  TArtDecoderTacquila.hh  TArtDecoderVmeEasyroc.hh  TArtEventInfo.hh  TArtEventStore.hh  TArtMap.hh  TArtRawDataObject.hh  TArtRawEventObject.hh  TArtRawFADCDataObject.hh  TArtRawSegmentObject.hh  TArtRawTacquilaDataObject.hh  TArtReconstruction.hh  TArtRunInfo.hh  TArtStoreManager.hh  segidlist.hh
sources/Core/src/: TArtCore.cc  TArtDecoderA3400.cc  TArtDecoderBigEndianV7XX.cc  TArtDecoderFactory.cc  TArtDecoderHINP.cc  TArtDecoderMADC32.cc  TArtDecoderMQDC32.cc  TArtDecoderMTDC32.cc  TArtDecoderNeulandTS.cc  TArtDecoderSIS3301.cc  TArtDecoderTacquila.cc  TArtDecoderV1190.cc  TArtDecoderV7XX.cc  TArtDecoderVmeEasyroc.cc  TArtEventStore.cc  TArtFileDataSource.cc  TArtParserRIDF.cc  TArtRawDataObject.cc  TArtRawSegmentObject.cc  TArtStoreManager.cc
sources/Nadeko/: Makefile.am  ananadeko_linkdef.hh
sources/Nadeko/include/: TArtAlias.hh  TArtSimpleFunction.hh
sources/Nadeko/src/: TArtAlias.cc  TArtSimpleFunction.cc
sources/Reconstruction/: Makefile.am
sources/Reconstruction/BigRIPS/: Makefile.am  anabrips_linkdef.hh
sources/Reconstruction/BigRIPS/include/: TArtBeam.hh  TArtBigRIPSParameters.hh  TArtCalibCoin.hh  TArtCalibFocalPlane.hh  TArtCalibGe.hh  TArtCalibIC.hh  TArtCalibPPAC.hh  TArtCalibPlastic.hh  TArtCalibSi.hh  TArtCalibTKE.hh  TArtFocalPlane.hh  TArtFocalPlanePara.hh  TArtGe.hh  TArtGePara.hh  TArtIC.hh  TArtICPara.hh  TArtPPAC.hh  TArtPPACPara.hh  TArtPlastic.hh  TArtPlasticPara.hh  TArtRIPSPara.hh  TArtRecoBeam.hh  TArtRecoRIPS.hh  TArtRecoTOF.hh  TArtSi.hh  TArtSiPara.hh  TArtTKE.hh  TArtTKEPara.hh  TArtTOF.hh  TArtTOFPara.hh
sources/Reconstruction/BigRIPS/src/: TArtBigRIPSParameters.cc  TArtCalibCoin.cc  TArtCalibFocalPlane.cc  TArtCalibGe.cc  TArtCalibIC.cc  TArtCalibPID.cc  TArtCalibPPAC.cc  TArtCalibPlastic.cc  TArtCalibSi.cc  TArtCalibTKE.cc  TArtRecoBeam.cc  TArtRecoRIPS.cc  TArtRecoTOF.cc
sources/Reconstruction/CATANA/: Makefile.am  anacatana_linkdef.hh
sources/Reconstruction/CATANA/include/: TArtCATANACsI.hh  TArtCATANACsIPara.hh  TArtCATANAParameters.hh  TArtCalibCATANA.hh
sources/Reconstruction/CATANA/src/: TArtCATANAParameters.cc  TArtCalibCATANA.cc
sources/Reconstruction/DALI/: Makefile.am  anadali_linkdef.hh
sources/Reconstruction/DALI/include/: TArtCalibDALI.hh  TArtDALINaI.hh  TArtDALINaIPara.hh
sources/Reconstruction/DALI/src/: TArtCalibDALI.cc  TArtDALIParameters.cc
sources/Reconstruction/ESPRI/: Makefile.am  anaespri_linkdef.hh
sources/Reconstruction/ESPRI/include/: TArtBDC.hh  TArtBLD.hh  TArtCalibBDC.hh  TArtCalibBLD.hh  TArtCalibDia.hh  TArtCalibFADC.hh  TArtCalibPlas.hh  TArtCalibRDC.hh  TArtCalibRNaI.hh  TArtCalibTDCHit.hh  TArtDia.hh  TArtESPRIParameters.hh  TArtFADC.hh  TArtFADCPara.hh  TArtPlas.hh  TArtPlasPara.hh  TArtRDC.hh  TArtRNaI.hh  TArtRNaIPara.hh  TArtTDCHit.hh  TArtTDCHitPara.hh  TArtUserParameters.hh
sources/Reconstruction/ESPRI/src/: TArtCalibBDC.cc  TArtCalibBLD.cc  TArtCalibDia.cc  TArtCalibFADC.cc  TArtCalibPlas.cc  TArtCalibRDC.cc  TArtCalibRNaI.cc  TArtCalibTDCHit.cc  TArtESPRIParameters.cc  TArtUserParameters.cc
sources/Reconstruction/MINOS/: Makefile.am  anaminos_linkdef.hh
sources/Reconstruction/MINOS/include/: TArtMINOSMap.hh  TArtMINOSPara.hh
sources/Reconstruction/MINOS/src/: TArtCalibMINOS.cc  TArtMINOSParameters.cc  TArtTrackMINOS.cc
sources/Reconstruction/SAMURAI/: Makefile.am  anasamurai_linkdef.hh
sources/Reconstruction/SAMURAI/include/: TArtCalcGlobalTrack.hh  TArtCalibBDC1Hit.hh  TArtCalibBDC1Track.hh  TArtCalibBDC2Hit.hh  TArtCalibBDC2Track.hh  TArtCalibBPCHit.hh  TArtCalibDCHit.hh  TArtCalibDCTrack.hh  TArtCalibFDC0Hit.hh  TArtCalibFDC0Track.hh  TArtCalibFDC1Hit.hh  TArtCalibFDC1Track.hh  TArtCalibFDC2Hit.hh  TArtCalibFDC2Track.hh  TArtCalibHIME.hh  TArtCalibHODPla.hh  TArtCalibICF.hh  TArtCalibNEBULA.hh  TArtCalibNEBULAHPC.hh  TArtCalibNINJA.hh  TArtCalibNeuLAND.hh  TArtCalibNeuLANDVETO.hh  TArtCalibPDCHit.hh  TArtCalibPDCTrack.hh  TArtCalibRPDCHit.hh  TArtCalibRPDCTrack.hh  TArtCalibRPTOFPla.hh  TArtCalibS1DC1Hit.hh  TArtCalibS1DC1Track.hh  TArtCalibS1DC2Hit.hh  TArtCalibS1DC2Track.hh  TArtCalibSAMURAI.hh  TArtCalibSAMURAITZero.hh  TArtCalibSimpleBDC1Track.hh  TArtCalibSimpleBDC2Track.hh  TArtCalibSimpleDCTrack.hh  TArtCalibSimpleFDC0Track.hh  TArtCalibSimpleFDC1Track.hh  TArtCalibSimpleFDC2Track.hh  TArtCalibTEDCsI.hh  (+21 more)
sources/Reconstruction/SAMURAI/src/: TArtCalcGlobalTrack.cc  TArtCalibBDC1Hit.cc  TArtCalibBDC1Track.cc  TArtCalibBDC2Hit.cc  TArtCalibBDC2Track.cc  TArtCalibBPCHit.cc  TArtCalibDCHit.cc  TArtCalibDCTrack.cc  TArtCalibFDC0Hit.cc  TArtCalibFDC0Track.cc  TArtCalibFDC1Hit.cc  (+33 more)
sources/Reconstruction/SILICONS/: Makefile.am  anasilicons_linkdef.hh
sources/Reconstruction/WINDS/: Makefile.am  anawinds_linkdef.hh
(+23 files in other folders)
